--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -17,7 +17,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" type="password"/>
+                <input asp-for="Password" class="form-control" type="password" id="password"/>
+                <i class="bi bi-eye-slash" id="togglePassword"></i>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
@@ -32,3 +33,23 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+    const togglePassword = document.querySelector("#togglePassword");
+    const password = document.querySelector("#password");
+
+    togglePassword.addEventListener("click", function () {
+        // Toggle the Type Attribute
+        const type = password.getAttribute("type") === "password" ? "text" : "password";
+        password.setAttribute("type", type);
+
+        // Toggle the Icon
+        this.classList.toggle("bi-eye");
+    });
+
+    // Prevent Form Submit
+    const form = document.querySelector("form");
+    form.addEventListener('submit', function (e) {
+        e.preventDefault();
+    });
+</script>
