--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -41,7 +41,6 @@ footer #footerText {
 }
 .backArrow /* Arrow */ {
     margin: 6px 0;
-    width: 80px;
     display: flex;
     align-items: center;
     height: fit-content;
@@ -230,7 +229,16 @@ header form * {
     padding-bottom: initial !important;
 }
 
-/* SnackBar */
+/* Placement to Toggle Password Visibility */
+form i {
+    margin-left: -30px;
+    cursor: pointer;
+}
+.togglePasswordForm input {
+    display: inline;
+}
+
+/* PopUp Toast */
 #snackbar {
     /* Positioning */
     opacity: 0; /* Hide */
