--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
 ﻿@model HogeschoolPXL.Models.ViewModels.LoginViewModel
+@* Link voor Bootstrap Icons *@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
 @{
     ViewData["Title"] = "Login";
@@ -17,11 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" type="password" id="password"/>
-                <i class="bi bi-eye-slash" id="togglePassword"></i>
+                <div class="togglePasswordForm">
+                    <input asp-for="Password" class="form-control" type="password" id="password"/>
+                    <i class="bi bi-eye-slash" id="togglePassword"></i>
+                </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-
             <div class="form-group d-flex justify-content-between">
                 <a class="btn btn-sm backArrow" asp-action="Register" asp-controller="Account">Registreer</a>
                 <input type="submit" value="Inloggen" class="btn btn-outline-success btn-sm viewButton" />
@@ -38,18 +41,12 @@
     const togglePassword = document.querySelector("#togglePassword");
     const password = document.querySelector("#password");
 
-    togglePassword.addEventListener("click", function () {
-        // Toggle the Type Attribute
+    togglePassword.addEventListener("click", function ()
+    {
+        // Toggle Type Attribute
         const type = password.getAttribute("type") === "password" ? "text" : "password";
         password.setAttribute("type", type);
-
         // Toggle the Icon
         this.classList.toggle("bi-eye");
-    });
-
-    // Prevent Form Submit
-    const form = document.querySelector("form");
-    form.addEventListener('submit', function (e) {
-        e.preventDefault();
     });
 </script>
