--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -64,6 +64,10 @@ footer #footerText {
     background-color: #333333;
     color: white;
 }
+.card /* StudentCard TagHelper Details Page */ {
+    box-shadow: 0 0 8px lightgrey;
+    border-radius: 20px;
+}
 
 /* Navigation Menu View Component */
 #categories a {
@@ -110,7 +114,7 @@ table {
     /* Positioning */
     border-collapse: separate;
     /* Styling */
-    border-radius: 8px;
+    border-radius: 20px;
     padding: 2px 10px;
     background-color: #fafafa;
     box-shadow: 0 0 20px lightgrey;
