--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row d-flex justify-content-center">
     <div class="col-md-4">
-        <form asp-action="Register" autocomplete="off">
+        <form asp-action="Register" autocomplete="new-password">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <div class="togglePasswordForm">
-                    <input asp-for="Password" class="form-control password" type="password"/>
+                    <input asp-for="Password" class="form-control password" type="password" autocomplete="new-password" />
                     <i class="bi bi-eye-slash" id="togglePassword"></i>
                 </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
@@ -28,6 +28,7 @@
             <div class="form-group">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
                 <input asp-for="ConfirmPassword" class="form-control password" type="password"/>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
                 <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
