--- a/Views/Handboek/Details.cshtml
+++ b/Views/Handboek/Details.cshtml
@@ -35,7 +35,7 @@
                 else { <img src="@Model.Afbeelding" width="170px" height="240px"/> }
             </dd>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
+                <a class="btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
