--- a/Views/Lector/Delete.cshtml
+++ b/Views/Lector/Delete.cshtml
@@ -19,7 +19,7 @@
         </dl>
     
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Lector">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
