--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -11,7 +11,7 @@
 @if (Model.Inschrijving != null)
 {
     <div class="form-group d-flex justify-content-center">
-        <a class="btn btn-sm backArrow mx-1" asp-action="Index" asp-controller="Student">
+        <a class="btn-sm backArrow mx-1" asp-action="Index" asp-controller="Student">
             <img src="~/img/arrow-left-black.png" height="16"/>
             <span >Terug</span>
         </a>
