--- a/Views/AcademieJaar/Details.cshtml
+++ b/Views/AcademieJaar/Details.cshtml
@@ -18,7 +18,7 @@
         </dl>
 
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Academiejaar">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Academiejaar">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
