--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -31,7 +31,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
+                <a class="btn-sm backArrow" asp-action="Index" asp-controller="Home">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span>Home</span>
                 </a>
@@ -45,7 +45,7 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 
-<script>
+<script> // Script for the small eye icon in the Password Field to Toggle Password Visibility
     const togglePassword = document.querySelector("#togglePassword");
     const password = document.querySelectorAll(".password");
 
