--- a/Views/Gebruiker/Create.cshtml
+++ b/Views/Gebruiker/Create.cshtml
@@ -26,7 +26,7 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
+                <a class="btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
