--- a/Views/Gebruiker/Details.cshtml
+++ b/Views/Gebruiker/Details.cshtml
@@ -29,7 +29,7 @@
             </dd>
         </dl>
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
