--- a/Views/Handboek/Delete.cshtml
+++ b/Views/Handboek/Delete.cshtml
@@ -36,7 +36,7 @@
         </dl>
     
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
