--- a/Views/Handboek/Edit.cshtml
+++ b/Views/Handboek/Edit.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Afbeelding" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                <a class="btn-sm backArrow" href="javascript:history.back()">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
