--- a/Views/Inschrijving/Create.cshtml
+++ b/Views/Inschrijving/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
+                <a class="btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
