--- a/Views/Inschrijving/Delete.cshtml
+++ b/Views/Inschrijving/Delete.cshtml
@@ -31,7 +31,7 @@
         </dl>
     
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
