--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex justify-content-between mx-2 mb-3" onload="highlightButton_InschrPage()">
-    <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
+    <a class="btn-sm backArrow" asp-action="Index" asp-controller="Home">
         <img src="~/img/arrow-left-black.png" height="16"/>
         <span>Home</span>
     </a>
