--- a/Views/Lector/Create.cshtml
+++ b/Views/Lector/Create.cshtml
@@ -10,16 +10,26 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="GebruikerId" class="control-label"></label>
-                <select asp-for="GebruikerId" class ="form-control" asp-items="ViewBag.GebruikerId"></select>
-            </div>
+            @if (ViewBag.GebruikerId != null)
+            {
+                <div class="form-group">
+                    <label asp-for="GebruikerId" class="control-label"></label>
+                    <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
+                </div>
+            }
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+                <a class="btn-sm backArrow" asp-action="Index" asp-controller="Lector">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
-                <input type="submit" value="Creëer Lector" class="btn btn-outline-success btn-sm viewButton"/>
+                @if (ViewBag.GebruikerId != null)
+                {
+                    <input type="submit" value="Creëer Lector" class="btn btn-outline-success btn-sm viewButton"/>
+                }
+                else
+                {
+                    <input type="submit" value="Creëer Lector" class="btn btn-outline-success btn-sm viewButton" disabled/>
+                }
             </div>
         </form>
     </div>
