--- a/Views/Lector/Details.cshtml
+++ b/Views/Lector/Details.cshtml
@@ -24,7 +24,7 @@
             </dd>
         </dl>
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Lector">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
