--- a/Views/Lector/Edit.cshtml
+++ b/Views/Lector/Edit.cshtml
@@ -11,18 +11,21 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LectorId"/>
-            <div class="form-group">
-                <label asp-for="GebruikerId" class="control-label"></label>
-                <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
-                <span asp-validation-for="GebruikerId" class="text-danger"></span>
-            </div>
-
+            @if (ViewBag.GebruikerId != null)
+            {
+                <div class="form-group">
+                    <label asp-for="GebruikerId" class="control-label"></label>
+                    <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
+                    <span asp-validation-for="GebruikerId" class="text-danger"></span>
+                </div>
+            }
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                <a class="btn-sm backArrow" href="javascript:history.back()">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
-                <input type="submit" value="Update Lector" class="btn btn-outline-success btn-sm viewButton"/>
+                @if (ViewBag.GebruikerId != null) { <input type="submit" value="Update Lector" class="btn btn-outline-success btn-sm viewButton"/> }
+                else { <input type="submit" value="Update Lector" class="btn btn-outline-success btn-sm viewButton" disabled/> }
             </div>
         </form>
     </div>
