--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -40,7 +40,7 @@
                     @*<span asp-validation-for="Password" class="text-danger"></span>*@
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                    <a class="btn btn-sm backArrow" asp-controller="Account" asp-action="Register">Registreren</a>
+                    <a class="btn-sm backArrow" asp-controller="Account" asp-action="Register">Registreren</a>
                     <input type="submit" value="Inloggen" class="btn btn-outline-success btn-sm viewButton"/>
                 </div>
             </form>
