--- a/Views/Vak/Delete.cshtml
+++ b/Views/Vak/Delete.cshtml
@@ -30,7 +30,7 @@
         </dl>
 
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Vak">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="Vak">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
