--- a/Views/VakLector/Delete.cshtml
+++ b/Views/VakLector/Delete.cshtml
@@ -25,7 +25,7 @@
         </dl>
     
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="VakLector">
+            <a class="btn-sm backArrow" asp-action="Index" asp-controller="VakLector">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
