--- a/Views/VakLector/Edit.cshtml
+++ b/Views/VakLector/Edit.cshtml
@@ -22,7 +22,7 @@
                 <span asp-validation-for="VakId" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                <a class="btn-sm backArrow" href="javascript:history.back()">
                     <img src="~/img/arrow-left-black.png" height="16"/>
                     <span >Terug</span>
                 </a>
