--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using HogeschoolPXL
 @using HogeschoolPXL.Models
+@using HogeschoolPXL.Models.ViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, HogeschoolPXL
+
