--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -1,3 +1,2 @@
-﻿<div>
-	U heeft geen rechten om deze pagina te openen.
-</div>
+﻿<h1 class="text-center my-5">U heeft geen recht om deze pagina te bekijken</h1>
+<hr />
