--- a/Views/Handboek/Index.cshtml
+++ b/Views/Handboek/Index.cshtml
@@ -44,7 +44,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UitgifteDatum)
             </td>
-            <td>
+            <td class="text-start">
                 @Html.DisplayFor(modelItem => item.Afbeelding)
             </td>
             <td>
