--- a/Views/Inschrijving/Details.cshtml
+++ b/Views/Inschrijving/Details.cshtml
@@ -29,12 +29,15 @@
                 @Html.DisplayFor(model => model.Academiejaar.Datum)
             </dd>
         </dl>
-        <div class="form-group d-flex justify-content-between">
+        <div class="form-group d-flex @(User.IsInRole("Admin") || User.IsInRole("Student") ? "justify-content-between" : "justify-content-center")">
             <a class="btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
                 <img src="~/img/arrow-left-black.png" height="16"/>
                 <span >Terug</span>
             </a>
-            <a asp-action="Edit" asp-route-id="@Model?.InschrijvingId" class="btn btn-outline-success btn-sm viewButton">Edit Lector</a>
+            @if (User.IsInRole("Admin") || User.IsInRole("Student"))
+            {
+                <a asp-action="Edit" asp-route-id="@Model?.InschrijvingId" class="btn btn-outline-success btn-sm viewButton">Edit Lector</a>
+            }
         </div>
     </div>
 </div>
