--- a/Views/AcademieJaar/Index.cshtml
+++ b/Views/AcademieJaar/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Academiejaren</h1>
-    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Academiejaar</a>
+    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") ? "" : "invisible")" asp-action="Create">Creëer Academiejaar</a>
 </div>
 
 <table class="table">
@@ -26,14 +26,23 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
+            <td class="text-start">
                 @Html.DisplayFor(modelItem => item.Datum)
             </td>
-            <td>
-                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.AcademiejaarId">Edit</a>
-                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.AcademiejaarId">Details</a>
-                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.AcademiejaarId">Delete</a>
-            </td>
+            @{if (User.IsInRole("Admin"))
+            {
+                <td>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.AcademiejaarId">Edit</a>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.AcademiejaarId">Details</a>
+                    <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.AcademiejaarId">Delete</a>
+                </td>    
+            }
+            else
+            {
+                <td>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.AcademiejaarId">Details</a>
+                </td>      
+            }}
         </tr>
     }
     </tbody>
