--- a/Views/Account/CreateRole.cshtml
+++ b/Views/Account/CreateRole.cshtml
@@ -1,18 +1,36 @@
 ﻿@model RoleViewModel
 
-<h1>Create Role</h1>
+<h1 class="titleView">Beheer Rollen</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="CreateRole">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RoleName" class="control-label"></label>
+                <label asp-for="RoleName" class="control-label">Rolnaam</label>
                 <input asp-for="RoleName" class="form-control" type="text"/>
             </div>
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn-sm backArrow" asp-action="Identity" asp-controller="Account">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
+                </a>
+                <input type="submit" value="Creëer Rol" class="btn btn-outline-success btn-sm viewButton"/>
+            </div>
+        </form>
+
+        <form asp-action="DeleteRole">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="RoleName" class="control-label">Rolnaam</label>
+                <select asp-for="RoleName" class="form-control" asp-items="@ViewBag.Roles"/>
+            </div>
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn-sm backArrow" asp-action="Identity" asp-controller="Account">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
+                </a>
+                <input type="submit" value="Creëer Rol" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
