--- a/Views/Gebruiker/Index.cshtml
+++ b/Views/Gebruiker/Index.cshtml
@@ -38,7 +38,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Naam)
             </td>
-            <td>
+            <td class="text-start">
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
