--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@*@model HogeschoolPXL.Models.ViewModels.LoginViewModel*@
 
 <div class="dropdown dropdown-login" onload="disableToast_LoginPage()">
     <span id="loginImg">
@@ -23,26 +22,23 @@
         {
             <span class="dropdown-item">@User.Identity?.Name</span>
             <hr>
-            @* Identity *@
+            @* Show Identity Tab if Admin is Logged in *@
             @if (User.IsInRole("Admin"))
             {
                 <a class="dropdown-item" class="dropdown-item" asp-controller="Account" asp-action="Identity">Identity</a>
             }
-            <a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a>
+            <a class="dropdown-item" asp-controller="Account" asp-action="Logout">Uitloggen</a>
         }
         else
         {
-            <form class="dropdown-item" asp-controller="Account" asp-action="Login" method="post">
-                @*<div asp-validation-summary="All" class="text-danger"></div>*@
+            <form class="dropdown-item" asp-controller="Account" asp-action="Login" method="post" autocomplete="off">
                 <div class="form-group">
                     <label name="Email" class="control-label">Email</label>
                     <input name="Email" class="form-control" type="email" placeholder="email@example.com"/>
-                    @*<span asp-validation-for="Email" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
-                    <label name="Password" class="control-label">Password</label>
+                    <label name="Password" class="control-label">Wachtwoord</label>
                     <input name="Password" class="form-control" type="password" placeholder="Wachtwoord"/>
-                    @*<span asp-validation-for="Password" class="text-danger"></span>*@
                 </div>
                 <div class="form-group d-flex justify-content-between">
                     <a class="btn-sm backArrow" asp-controller="Account" asp-action="Register">Registreren</a>
