--- a/Views/Shared/_HeaderPartial.cshtml
+++ b/Views/Shared/_HeaderPartial.cshtml
@@ -1,35 +1,53 @@
-﻿<a asp-controller="Home" asp-action="Index" id="logo">
+﻿@inject SignInManager<IdentityUser> SignInManager
+
+<a asp-controller="Home" asp-action="Index" id="logo">
     <img src="~/img/pxl.png"/>
 </a>
 
-<div class="dropdown">
-    <span>Gebruiker</span>
-    <div class="dropdown-content">
-        <a class="dropdown-item" asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
-        <hr>
+@* You need to be signed in to see any info *@
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="dropdown">
+        <span>Gebruiker</span>
+        <div class="dropdown-content">
+        @if (User.IsInRole("Admin"))
+        {
+            <a class="dropdown-item" asp-controller="Gebruiker" asp-action="Index">Gebruiker</a>
+            <hr>
+        }
         <a class="dropdown-item" asp-controller="Student" asp-action="Index">Student</a>
         <a class="dropdown-item" asp-controller="Lector" asp-action="Index">Lector</a>
+        </div>
     </div>
-</div>
+}
 
-<div class="dropdown">
-    <span>Inschrijving</span>
-    <div class="dropdown-content">
-        <a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a>
-        <hr>
-        <a class="dropdown-item" asp-controller="Academiejaar" asp-action="Index">Academiejaar</a>
-        <a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a>
-        <a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a>
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="dropdown">
+        <span>Inschrijving</span>
+        <div class="dropdown-content">
+            <a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a>
+            @if (User.IsInRole("Admin") || User.IsInRole("Lector"))
+            {
+                <hr>
+                <a class="dropdown-item" asp-controller="Academiejaar" asp-action="Index">Academiejaar</a>
+                <a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a>
+                <a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a>
+            }
+        </div>
     </div>
-</div>
+}
 
-<div class="dropdown">
-    <span>VakLector</span>
-    <div class="dropdown-content">
-        <a class="dropdown-item" class="dropdown-item" asp-controller="VakLector" asp-action="Index">VakLector</a>
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="dropdown">
+        <span>VakLector</span>
+        <div class="dropdown-content">
+            <a class="dropdown-item" class="dropdown-item" asp-controller="VakLector" asp-action="Index">VakLector</a>
+        </div>
     </div>
-</div>
-        
+}
+
 <form role="search">
     <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Zoeken</button>
