--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Studenten</h1>
-    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Student</a>
+    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") ? "" : "invisible")" asp-action="Create">Creëer Student</a>
 </div>
 
 <table class="table">
@@ -26,15 +26,24 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
+            <td class="text-start">
                 @Html.DisplayFor(modelItem => item.Gebruiker.Voornaam)
                 @Html.DisplayFor(modelItem => item.Gebruiker.Naam)
             </td>
-            <td>
-                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.StudentId">Edit</a>
-                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.StudentId">Details</a>
-                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.StudentId">Delete</a>
-            </td>
+            @if (User.IsInRole("Admin"))
+            {
+                <td>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.StudentId">Edit</a>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.StudentId">Details</a>
+                    <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.StudentId">Delete</a>
+                </td>
+            }
+            else
+            {
+                <td>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.StudentId">Details</a>
+                </td>
+            }
         </tr>
     }
     </tbody>
