Added CreateRole, DeleteRole, Identity and ManageUserRoles tab and updated the AccountController. All Working.

--- a/Views/Account/Identity.cshtml
+++ b/Views/Account/Identity.cshtml
@@ -7,8 +7,9 @@
     </a>
     <h1>Identity</h1>
 	<div>
-		<a class="btn btn-outline-success btn-sm viewButton mx-2" asp-controller="Account" asp-action="CreateRole">Creëer/Verwijder Rollen</a>
-		<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="AssignRole">Beheer Rollen van Gebruikers</a>
+		<a class="btn btn-outline-success btn-sm viewButton" asp-controller="Account" asp-action="CreateRoles">Creëer Rollen</a>
+		<a class="btn btn-outline-danger btn-sm viewButton mx-2" asp-controller="Account" asp-action="DeleteRoles">Verwijder Rollen</a>
+		<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="ManageUserRoles">Beheer Rollen van Gebruikers</a>
 	</div>
 </div>
 
@@ -84,3 +85,29 @@
 		</table>
 	}
 </div>
+
+@* Alert after a successfull delete or add of roles *@
+@if (ViewBag.Alert == "RoleCreated")
+{
+	<div id="snackbar">
+		<div class="toast-header">
+			<img src="~/img/green-check.png" height="16" class="me-2">
+			<strong class="me-auto">Succesfull</strong>
+		</div>
+		<div class="toast-body">
+			Succesfully Added Role
+		</div>
+	</div>
+}
+@if (ViewBag.Alert == "RoleDeleted")
+{
+	<div id="snackbar">
+		<div class="toast-header">
+			<img src="~/img/green-check.png" height="16" class="me-2">
+			<strong class="me-auto">Succesfull</strong>
+		</div>
+		<div class="toast-body">
+			Succesfully Deleted Role
+		</div>
+	</div>
+}
