--- a/Views/Account/ManageUserRoles.cshtml
+++ b/Views/Account/ManageUserRoles.cshtml
@@ -15,45 +15,44 @@
                 <select asp-for="Roles" class="form-control" asp-items="ViewBag.Roles"></select>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <input type="submit" value="Verwijderen" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
-                <input type="submit" value="Toekennen" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Remove Role" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
+                <input type="submit" value="Add Role" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
 </div>
 
 @* Alert after a successfull delete or add of roles *@
-@{
-    if (ViewBag.Alert == "RoleAssigned")
-    {
-        <div id="snackbar">
-            <div class="toast-header">
-                <img src="~/img/green-check.png" height="16" class="me-2">
-                <strong class="me-auto">Succesfull</strong>
-            </div>
-            <div class="toast-body">
-                Succesfully Added Role
-            </div>
+@if (ViewBag.Alert == "RoleAssignedToUser")
+{
+    <div id="snackbar">
+        <div class="toast-header">
+            <img src="~/img/green-check.png" height="16" class="me-2">
+            <strong class="me-auto">Succesfull</strong>
         </div>
-    }
-    else if (ViewBag.Alert == "RoleDeleted")
-    {
-        <div id="snackbar">
-            <div class="toast-header">
-                <img src="~/img/red-cross.png" height="16" class="me-2">
-                <strong class="me-auto">Succesfull</strong>
-            </div>
-            <div class="toast-body">
-                Succesfully Deleted Role
-            </div>
+        <div class="toast-body">
+            Succesfully Assign a User a Role
         </div>
-    }
+    </div>
 }
+@if (ViewBag.Alert == "RoleRemovedFromUser")
+{
+    <div id="snackbar">
+        <div class="toast-header">
+            <img src="~/img/green-check.png" height="16" class="me-2">
+            <strong class="me-auto">Succesfull</strong>
+        </div>
+        <div class="toast-body">
+            Succesfully Removed Role from User
+        </div>
+    </div>
+}
+
 
 <script>
     // De 2 selectLists op deze pagina hebben een attribute die "multiple" noemt, dit verwijdert ze
     var selectElements = document.querySelectorAll(".form-control");
-      for (var i = 0; i < selectElements.length; i++) {
+    for (var i = 0; i < selectElements.length; i++) {
         selectElements[i].removeAttribute("multiple");
-      }
+    }
 </script>
