--- a/Views/Account/ManageUserRoles.cshtml
+++ b/Views/Account/ManageUserRoles.cshtml
@@ -15,39 +15,18 @@
                 <select asp-for="Roles" class="form-control" asp-items="ViewBag.Roles"></select>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <input type="submit" value="Remove Role" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
-                <input type="submit" value="Add Role" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
+                <a class="btn-sm backArrow" asp-action="Identity" asp-controller="Account">
+                    <img src="~/img/arrow-left-black.png" height="16" />
+                    <span>Terug</span>
+                </a>
+                <div class="btn-group">
+                    <input type="submit" value="Remove Role" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
+                    <input type="submit" value="Add Role" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
+                </div>
             </div>
         </form>
     </div>
 </div>
-
-@* Alert after a successfull delete or add of roles *@
-@if (ViewBag.Alert == "RoleAssignedToUser")
-{
-    <div id="snackbar">
-        <div class="toast-header">
-            <img src="~/img/green-check.png" height="16" class="me-2">
-            <strong class="me-auto">Succesfull</strong>
-        </div>
-        <div class="toast-body">
-            Succesfully Assign a User a Role
-        </div>
-    </div>
-}
-@if (ViewBag.Alert == "RoleRemovedFromUser")
-{
-    <div id="snackbar">
-        <div class="toast-header">
-            <img src="~/img/green-check.png" height="16" class="me-2">
-            <strong class="me-auto">Succesfull</strong>
-        </div>
-        <div class="toast-body">
-            Succesfully Removed Role from User
-        </div>
-    </div>
-}
-
 
 <script>
     // De 2 selectLists op deze pagina hebben een attribute die "multiple" noemt, dit verwijdert ze
