--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 @* Toast after login attempt *@
 @{
-    if (ViewBag.Login == "Succeeded")
+    if (ViewBag.Login == "LoginSucceeded")
     {
         <div id="snackbar">
             <div class="toast-header">
@@ -17,6 +17,18 @@
             </div>
             <div class="toast-body">
                 Logged in as <i>@User.Identity?.Name</i>
+            </div>
+        </div>
+    }
+    else if (ViewBag.Login == "RegisterSucceeded")
+    {
+        <div id="snackbar">
+            <div class="toast-header">
+                <img src="~/img/green-check.png" height="16" class="me-2">
+                <strong class="me-auto">Succesfull</strong>
+            </div>
+            <div class="toast-body">
+                Successfully Registered
             </div>
         </div>
     }
