--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -30,6 +30,11 @@
                 <input asp-for="ConfirmPassword" class="form-control password" type="password"/>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Roles" class="control-label"></label>
+                <input asp-for="Roles" class="form-control password" type="password" />
+                <span asp-validation-for="Roles" class="text-danger"></span>
+            </div>
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Index" asp-controller="Home">
                     <img src="~/img/arrow-left-black.png" height="16"/>
