--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -248,6 +248,12 @@ header form * {
 .identity tr td:last-child {
     text-align: initial;
 }
+.identity #users td:last-child {
+    text-align: right;
+}
+.identity #users a {
+    margin: 0;
+}
 
 /* Placement to Toggle Password Visibility */
 form i {
