Changes in naming conventions. Updated AccountController and got all Roles and Authorization working. Small bug fixes.

--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model HogeschoolPXL.Models.ViewModels.StudentCard
+﻿@model HogeschoolPXL.Models.ViewModels.StudentCardViewModel
 
 @{
     ViewData["Title"] = "Details";
