--- a/Views/Account/ManageUserRoles.cshtml
+++ b/Views/Account/ManageUserRoles.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IdentityViewModel
 
-<h1 class="titleView">Beheer Gebruikers en Rollen</h1>
+<h1 class="titleView" id="manageUserRoles">Beheer Gebruikers en Rollen</h1>
 
 <div class="row d-flex justify-content-center">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="FormHandler">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -20,8 +20,8 @@
                     <span>Terug</span>
                 </a>
                 <div class="btn-group">
-                    <input type="submit" value="Remove Role" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
-                    <input type="submit" value="Add Role" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
+                    <input type="submit" value="Remove Role From User" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
+                    <input type="submit" value="Add Role To User" name="submitButton" class="btn btn-outline-success btn-sm viewButton" />
                 </div>
             </div>
         </form>
