--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -31,9 +31,8 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Roles" class="control-label"></label>
-                <input asp-for="Roles" class="form-control password" type="password" />
-                <span asp-validation-for="Roles" class="text-danger"></span>
+                <label asp-for="Roles" class="control-label">Rollen</label>
+                <select asp-for="Roles" class="form-control" asp-items="ViewBag.Roles"></select>
             </div>
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Index" asp-controller="Home">
@@ -53,6 +52,12 @@
 <script> // Script for the small eye icon in the Password Field to Toggle Password Visibility
     const togglePassword = document.querySelector("#togglePassword");
     const password = document.querySelectorAll(".password");
+
+    // De Roles selectLists op deze pagina heeft een attribute die "multiple" noemt, dit verwijdert het
+    var selectElements = document.querySelectorAll(".form-control");
+    for (var i = 0; i < selectElements.length; i++) {
+        selectElements[i].removeAttribute("multiple");
+    }
 
     togglePassword.addEventListener("click", function () {
         for (let i = 0; i < password.length; i++)
